# tree-sitter-kasl

./: .editorconfig  Cargo.toml  binding.gyp  grammar.js  package.json  pnpm-lock.yaml  test.kasl  tree-sitter.json
bindings/node/: binding.cc  index.d.ts  index.js
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm  indents.scm  outline.scm
src/: grammar.json  node-types.json  parser.c
