[package]
name = "tree-sitter-kasl"
description = "A simple, and minimal audio processing language."
version = "0.1.0"
authors = ["Shuntaro Kasatani <shuntar30@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "kasl"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/hatya-mouse/tree-sitter-kasl"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
    "bindings/rust/*",
    "grammar.js",
    "queries/*",
    "src/*",
    "tree-sitter.json",
    "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.7"
